# lego-nxt-3d-scanner

./: pyproject.toml
src/ln3d_scanner/nxt/motors/: __init__.py  dual_motors.py  inverted_motor.py  precision_motor.py
src/ln3d_scanner/nxt/sensors/: switch.py
src/ln3d_scanner/scanner/camera/: __init__.py  camera_bar.py
src/ln3d_scanner/scanner/platform/: platform.py
src/ln3d_scanner/timer/: __init__.py  ln3d_timer.py
src/ln3d_scanner/tools/: app.py
